# bw-setswana-nlp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: README.md
data/lexicon/: README.md  core.json  lexicon.json  schema.json
data/locale/: README.md  tn-BW.json
data/translations/: README.md
docs/: lexicon-guide.md  noun-classes.md  orthography.md
docs/contributing/: corpus-guide.md  lexicon-guide.md  locale-guide.md  tokenizer-guide.md
src/bw_setswana_nlp/: __init__.py
src/bw_setswana_nlp/morphology/: __init__.py  analyzer.py
src/bw_setswana_nlp/tokenizer/: __init__.py  tokenizer.py
src/bw_setswana_nlp/utils/: __init__.py  text.py
tests/: conftest.py  test_morphology.py  test_tokenizer.py  test_utils.py
